# helix-cli

./: .gitignore  03-VALIDATION.md  CHAT_REAPPLY_CHANGE_LIST.md  README.md  apply_fix.py  copilot-instructions.md  init_map.json  setup.py  start.py  system_check.py
.agent/: gsd-file-manifest.json
.github/: gsd-file-manifest.json
.github/agents/: gsd-debugger.agent.md  gsd-executor.agent.md  gsd-phase-researcher.agent.md  gsd-plan-checker.agent.md  gsd-planner.agent.md  gsd-roadmapper.agent.md  gsd-verifier.agent.md
.gsd/: ROADMAP.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v10-MILESTONE-AUDIT.md  v11-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  (+6 more)
agent-rs/: Cargo.toml  error.txt
agent-rs/.planning/phases/04-gsd-test/: plan.json
agent-rs/src/: audit.rs  config.rs  input.rs  lib.rs  main.rs  rag.rs  runtime_profile.rs  server.rs  session.rs  stream.rs  tokens.rs  tools.rs  tui.rs  types.rs  utils.rs  watchdog.rs
agent-rs/src/agent_core/: guardian.rs  mod.rs  tool_runtime.rs
agent-rs/src/agent_core/diagnostics/: logs.rs  mod.rs  reasoning.rs  system.rs
agent-rs/src/agent_core/orchestration/: artifacts.rs  context_reset.rs  mod.rs  phase_state.rs  recovery.rs
agent-rs/src/agent_core/repair/: mod.rs  scoring.rs  snapshots.rs  tools.rs  workflow.rs
agent-rs/src/security/: mod.rs  policy.rs  sandbox.rs
agent-rs/src/tui/: api.rs  approval.rs  commands.rs  events.rs  state.rs  themes.rs
agent-rs/tests/: audit_log_mvp.rs  diagnostic_validation.rs  gsd_orchestration_validation.rs  os_diagnostics_integration.rs  plugin_sdk_ide_bridge_validation.rs  runtime_profile_watchdog.rs  runtime_profile_watchdog_validation.rs  security_guardrails.rs  streaming_tui_refinement.rs  test_secure_execution.rs  test_session_persistence.rs  tool_execution.rs  tool_runtime_contracts.rs
scripts/: build_zip.py  config.py  download_model.py  helix.py  helix_branding.py  model_install.py  onboarding_profile.py  start_agent.sh  start_server.py  start_server.sh  system_check.py  temp_project_namer.py
tests/: dataset.json  eval.py  test_accuracy.py  test_download_model.py  test_model_discovery.py  test_model_install.py  test_onboarding_profile.py  test_qwen_config.py  test_start_server_runtime_profile.py  test_start_server_runtime_profile_validation.py  test_system_check.py
web-ui/: package-lock.json  package.json
(+184 files in other folders)
