[package]
name = "agent-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.33.1"
reqwest = { version = "0.13.2", features = ["json"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tiktoken-rs = "0.9.1"
tokio = { version = "1.50.0", features = ["full"] }
ignore = "0.4"
rustyline = { version = "15", features = ["with-file-history"] }
rustyline-derive = "0.10"
gbnf = "0.2.6"
