[package]
name = "agent-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "agent_rs"
path = "src/lib.rs"

[[bin]]
name = "helix-agent"
path = "src/main.rs"

[dependencies]
async-openai = "0.33.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tiktoken-rs = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }
ignore = "0.4"
rustyline = { version = "15", features = ["with-file-history"] }
rustyline-derive = "0.10"
gbnf = "0.2.6"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.5"
ratatui = "0.26"
crossterm = "0.27"
tui-input = "0.8"
unicode-width = "0.1"
tachyonfx = "0.11.1"
throbber-widgets-tui = "0.4.0"

regex = "1"
shell-words = "1"
bollard = "0.20.2"
shell-sanitize = "0.1.0"
path-security = "0.2.0"
soft-canonicalize = "0.5.6"
num_cpus = "1.17.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sha2 = "0.11.0"
hex = "0.4.3"
chrono = "0.4.44"
